# Kaivoo-App

./: .gitignore  CLAUDE.md  netlify.toml
.claude/: settings.local.json
.github/workflows/: ci.yml  desktop.yml  release.yml
Agents/: CEO-Decisions.md  CEO.md  Director.md  Phase-A-Roadmap.md  Phase-BCD-Roadmap.md  Research-Parcels.md  Vision.md
Agents/CEO-Sessions/: CEO-Session-4-Local-First-Knowledge-OS.md
Agents/Design/: ARCHIVED-Agent-1-Senior-UI-Designer.md  ARCHIVED-Agent-Design.md  Agent-6-Usability-Architect.md  Agent-Accessibility-Theming.md  Agent-UX-Completeness.md  Agent-Visual-Design.md
Agents/DevOps/: Agent-9-DevOps-Engineer.md
Agents/Engineering/: AI-Integration-Agent.md  Agent-12-Data-Engineer.md  Agent-2-Staff-Software-Engineer.md  Agent-3-System-Architect.md  Agent-4-Security-Reliability-Engineer.md  Agent-7-Code-Reviewer.md
Branding/: Kaivoo-Brand-Identity-System-v2.pptx  Kaivoo-Design-System-Quick-Reference.md  Kaivoo-Design-System-v2.0.md
daily-flow/: .env.e2e.example  .env.example  .gitignore  .prettierignore  .prettierrc  CLAUDE.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  vite.config.ts  vitest.config.ts
daily-flow/e2e/: auth.setup.ts  (+2 more)
daily-flow/src-tauri/: Cargo.toml  tauri.conf.json
daily-flow/src-tauri/capabilities/: default.json
daily-flow/src-tauri/icons/: icon.icns
daily-flow/src-tauri/src/: heartbeat.rs  lib.rs  main.rs
landing/: astro.config.mjs  netlify.toml  package-lock.json  package.json  tailwind.config.mjs
legal/: EULA.md  PRIVACY-POLICY.md
(+455 files in other folders)
